<resources>
    <string name="save_payment_success_message">Payment has been saved!</string>

    <string name="enter_amount">Enter amount</string>
    <string name="how_many_people">How many people?</string>
    <string name="percent_tip">% TIP</string>
    <string name="total_tip">Total Tip</string>
    <string name="per_person">Per Person</string>
    <string name="save_payment">Save payment</string>
    <string name="update_filter">Update filter</string>
    <string name="take_photo_of_receipt">Take photo of receipt</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_payment_success_message">Payment has been successfully removed!</string>
    <string name="delete_payments_success_message">Payments has been successfully removed!</string>
    <string name="no_items_found">No items found.</string>
    <string name="select_all">Select all</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_date_ascending">Date ascending</string>
    <string name="sort_date_descending">Date descending</string>
    <string name="sort_payment_amount_ascending">Payment amount ascending</string>
    <string name="sort_payment_amount_descending">Payment amount descending</string>
    <string name="tip_percent_hint">10</string>
    <string name="payment_amount_hint">100.00</string>
</resources>